# BI-PA2-Project

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  TODO  ValgrindSuppression.sup  tank  zadani.txt
cmake/: FindSDL2_gfx.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake
examples/: highscores.txt  map  map.map  map1.map  map2.map  map4.map  map5.map
src/: Application.cpp  Application.hpp  Ball.cpp  Ball.hpp  Block.cpp  Block.hpp  Bonus.cpp  Bonus.hpp  CollisionModel.hpp  ExitState.cpp  ExitState.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  GameState.cpp  GameState.hpp  HighScoreManager.cpp  HighScoreManager.hpp  HighscoreManager.cpp  HighscoreManager.hpp  Lives.cpp  Lives.hpp  LoadState.cpp  LoadState.hpp  MainMenu.cpp  MainMenu.hpp  Map.cpp  Map.hpp  MapLoader.cpp  MapLoader.hpp  MenuState.cpp  MenuState.hpp  MenuText.cpp  MenuText.hpp  Platform.cpp  Platform.hpp  Resources.hpp  ResultState.cpp  ResultState.hpp  (+16 more)
